examples/test/testpolicy16134.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16134
  namespace: namespace300
spec:
  podSelector:
    matchLabels:
      key29: value27
      key13: value32
      key4: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value30
          key3: value23
      podSelector:
        matchLabels:
          key30: value2
          key43: value41
